package io.kdot.app.utils

object TestTags {
    object Onboarding {
        const val title = "onboarding_title"
        const val subTitle = "onboarding_sub_title"
        const val logo = "onboarding_logo"
    }

    object Login {
        const val title = "login_title"
        const val subTitle = "login_sub_title"
        const val clearIcon = "clearIcon"
        const val userNameInput = "userNameInput"
        const val passwordInput = "passwordInput"
        const val passwordToggleButton = "passwordToggleButton"
    }
}