...
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="screen_account_provider_signin_title">You’re about to sign in to %1$s</string>
    <string name="screen_login_subtitle">Matrix is an open network for secure, decentralised communication.</string>
    <string name="common_error">Error</string>
    <string name="common_success">Success</string>
    <string name="action_continue">Continue</string>
    <string name="common_username">Username</string>
    <string name="common_password">Password</string>
    <string name="screen_login_form_header">Enter your details</string>
    <string name="action_clear">Clear</string>
    <string name="action_close">Close</string>
    <string name="a11y_hide_password">Hide password</string>
...
